bin/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_25\bin\javadoc.exe
-sourcepath
E:\Aguilar, Byron Shrestha, Kiran
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\gpdraw.jar;C:\Program Files (x86)\BlueJ\lib\userlib\gridworld.jar;E:\Aguilar, Byron Shrestha, Kiran
-d
E:\Aguilar, Byron Shrestha, Kiran\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
Aguilar, Byron Shrestha, Kiran
-windowtitle
Aguilar, Byron Shrestha, Kiran
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/6/docs/api/
E:\Aguilar, Byron Shrestha, Kiran/Dice.java
E:\Aguilar, Byron Shrestha, Kiran/Runner.java
E:\Aguilar, Byron Shrestha, Kiran/DictionaryTools.java
<---- end of javadoc command ---->
Loading source file E:\Aguilar, Byron Shrestha, Kiran/Dice.java...
Loading source file E:\Aguilar, Byron Shrestha, Kiran/Runner.java...
Loading source file E:\Aguilar, Byron Shrestha, Kiran/DictionaryTools.java...
Constructing Javadoc information...
E:\Aguilar, Byron Shrestha, Kiran\DictionaryTools.java:10: error: package de.tudarmstadt.ukp.jwktl does not exist
import de.tudarmstadt.ukp.jwktl.*;
^
E:\Aguilar, Byron Shrestha, Kiran\DictionaryTools.java:11: error: package de.tudarmstadt.ukp.jwktl.api does not exist
import de.tudarmstadt.ukp.jwktl.api.*;
^
E:\Aguilar, Byron Shrestha, Kiran\DictionaryTools.java:12: error: package com.sleepycat.je does not exist
import com.sleepycat.je.*;
^
E:\Aguilar, Byron Shrestha, Kiran\DictionaryTools.java:16: error: cannot find symbol
    private static IWiktionaryEdition wkt;
                   ^
  symbol:   class IWiktionaryEdition
  location: class DictionaryTools
javadoc: warning - Error fetching URL: http://download.oracle.com/javase/6/docs/api/package-list
Standard Doclet version 1.7.0_25
Building tree for all the packages and classes...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\Dice.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\DictionaryTools.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\Runner.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\package-frame.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\package-summary.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\package-tree.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\constant-values.html...
Building index for all the packages and classes...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\overview-tree.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\index-all.html...
Building index for all classes...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\allclasses-frame.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\allclasses-noframe.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\index.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\help-doc.html...
Generating E:\Aguilar, Byron Shrestha, Kiran\doc\stylesheet.css...
5 warnings
